# resume-cert-ppt-generator

./: .gitignore  GITHUB_UPLOAD_GUIDE.md  README.md  TASK_FOR_WEB_CODEX.md  build_cert_history_ppt.ps1  pyproject.toml  requirements.txt  setup.ps1  validate.ps1
.github/workflows/: validate.yml
data/: certifications.json  image_prompt.txt
src/resume_cert_ppt/: __init__.py  generate_ppt.py
